# GPU_Image_Editor

./: .gitignore  App.h  Application.cpp  Application.h  Button.cpp  Button.h  CMakeLists.txt  Color.h  Glyph.cpp  Glyph.h  Image.cpp  Image.h  Makefile  Quad.cpp  Quad.h  README.md  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  TextureRectangle.cpp  TextureRectangle.h  Window.cpp  Window.h  main.cpp
include/: Application.h  Button.h  Color.h  Image.h  Window.h
lib/glad/: glad.c  glad.h
src/: Application.cpp  Window.cpp  main.cpp
src/shader/: button.fsh  quad.vsh
src/shaders/: button.fsh  quad.vsh
